--- a/src/PMT/WebBundle/Resources/public/css/anonymous.css
+++ b/src/PMT/WebBundle/Resources/public/css/anonymous.css
@@ -2,7 +2,7 @@ body {
     background-color: #f5f5f5;
 }
 
-.signin-wrapper {
+.box-wrapper {
     max-width: 300px;
     padding: 19px 29px 19px;
     margin: 0 auto 20px;
@@ -16,13 +16,14 @@ body {
     box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
 }
 
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
+form .form-heading,
+form .checkbox {
     margin-bottom: 10px;
 }
 
-.form-signin input[type="text"],
-.form-signin input[type="password"] {
+form input[type="text"],
+form input[type="email"],
+form input[type="password"] {
     font-size: 16px;
     height: auto;
     margin-bottom: 15px;
