--- a/src/PMT/WebBundle/Resources/views/Activity/list.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Activity/list.html.twig
@@ -65,7 +65,25 @@
         </li>
     </ul>
 {% else %}
-
+    <ul class="activity-stream simple">
+        <ul>
+            <li>
+                <p>
+                    <a href="#">Dries De Peuter</a> updated <a href="#">NOTIFIER-2 - Some issue summary</a>
+                </p>
+                <p>
+                    <i class="icon-time"></i> <time datetime="2013-06-06T20:00+00:00"></time>
+                </p>
+            </li>
+            <li>
+                <p>
+                    <a href="#">Dries De Peuter</a> updated <a href="#">NOTIFIER-2 - Some issue summary</a>
+                </p>
+                <p>
+                    <i class="icon-time"></i> <time datetime="2013-06-13T20:00+00:00"></time>
+                </p>
+            </li>
+        </ul>
 {% endif %}
 
 {% block body_scripts %}
