--- a/src/PMT/WebBundle/Resources/views/User/profile.html.twig
+++ b/src/PMT/WebBundle/Resources/views/User/profile.html.twig
@@ -38,11 +38,11 @@
             <div class="accordion">
                 <div class="accordion-group">
                     <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_details">
+                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_stream">
                             Activity stream
                         </a>
                     </div>
-                    <div id="accordion_details" class="accordion-body collapse in">
+                    <div id="accordion_stream" class="accordion-body collapse in">
                         <div class="accordion-inner">
                             {% include 'PMTWebBundle:Activity:list.html.twig' with {'view': 'simple'} %}
                         </div>
@@ -54,11 +54,11 @@
             <div class="accordion">
                 <div class="accordion-group">
                     <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_details">
+                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_projects">
                             Projects
                         </a>
                     </div>
-                    <div id="accordion_details" class="accordion-body collapse in">
+                    <div id="accordion_projects" class="accordion-body collapse in">
                         <div class="accordion-inner">
                             project list
                         </div>
@@ -68,11 +68,11 @@
             <div class="accordion">
                 <div class="accordion-group">
                     <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_details">
+                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_issues">
                             Issues
                         </a>
                     </div>
-                    <div id="accordion_details" class="accordion-body collapse in">
+                    <div id="accordion_issues" class="accordion-body collapse in">
                         <div class="accordion-inner">
                             {% include 'PMTWebBundle:Issue:list.html.twig' with {'issues': [], 'view': 'simple'} %}
                         </div>
