--- a/src/PMT/WebBundle/Resources/views/User/profile.html.twig
+++ b/src/PMT/WebBundle/Resources/views/User/profile.html.twig
@@ -74,7 +74,7 @@
                     </div>
                     <div id="accordion_issues" class="accordion-body collapse in">
                         <div class="accordion-inner">
-                            {% include 'PMTWebBundle:Issue:list.html.twig' with {'issues': [], 'view': 'simple'} %}
+                            {% include 'PMTWebBundle:Issue:list.html.twig' with {'issues': issues, 'view': 'simple'} %}
                         </div>
                     </div>
                 </div>
