Remove useless link

--- a/src/PMT/WebBundle/Resources/views/User/profile.html.twig
+++ b/src/PMT/WebBundle/Resources/views/User/profile.html.twig
@@ -19,9 +19,9 @@
                     <div id="accordion_details" class="accordion-body collapse in">
                         <div class="accordion-inner">
                             <div class="media">
-                                <a class="pull-left" href="#">
+                                <div class="pull-left">
                                     <img class="media-object avatar avatar-medium" src="https://si0.twimg.com/profile_images/2364006435/u0tai5lvqeegtbxkepjq_bigger.png">
-                                </a>
+                                </div>
                                 <div class="media-body">
                                     <table>
                                         <tr>
