--- a/src/PMT/WebBundle/Resources/views/Dashboard/dashboard.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Dashboard/dashboard.html.twig
@@ -2,17 +2,26 @@
 
 {% block content %}
     <div class="row">
-        <ul class="actions nav nav-pills pull-right">
-            <li class="active">
-                <a href="#"><i class="icon-edit icon-plus"></i> Add gadgets</a>
-            </li>
-            <li>
-                <a href="#"><i class="icon-edit"></i> Edit layout</a>
-            </li>
-            <li>
-                <a href="#"><i class="icon-wrench"></i> Settings</a>
-            </li>
-        </ul>
+        <div class="span6">
+            <h1>Dashboard</h1>
+        </div>
+        <div class="span6">
+            <ul class="actions nav nav-pills pull-right">
+                <li class="active">
+                    <a href="{{ path('issue_form') }}"><i class="icon-edit icon-plus"></i> Create issue</a>
+                </li>
+                <li>
+                    <a href="#"><i class="icon-edit icon-plus"></i> Add gadgets</a>
+                </li>
+                <li>
+                    <a href="#"><i class="icon-edit"></i> Edit layout</a>
+                </li>
+                <li>
+                    <a href="#"><i class="icon-wrench"></i> Settings</a>
+                </li>
+            </ul>
+        </div>
+
     </div>
 
     <div class="row">
