--- a/src/PMT/WebBundle/Resources/views/Issue/navigator.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/navigator.html.twig
@@ -55,7 +55,7 @@
                                 </div>
                                 <div class="controls row-fluid">
                                     <select class="span12" name="project" id="">
-                                        <option>All</option>
+                                        <option>All projects</option>
                                         <option value="">Notifier</option>
                                         <option value="">PMT</option>
                                     </select>
@@ -67,7 +67,7 @@
                                 </div>
                                 <div class="controls row-fluid">
                                     <select class="span12" name="milestone" id="">
-                                        <option>All</option>
+                                        <option>All milestones</option>
                                         <option value="">Notifier</option>
                                         <option value="">PMT</option>
                                     </select>
@@ -108,36 +108,50 @@
                 </div>
             </div>
 
-            <div class="row-fluid">
-                <input type="submit" class="hide"/>
-            </div>
-        </div>
-        <div class="span9">
-            <div class="accordion filters">
+            <div class="accordion">
                 <div class="accordion-group">
                     <div class="accordion-heading">
                         <a class="accordion-toggle" data-toggle="collapse" href="#accordion_filter">
-                            Filter
+                            Meta
                         </a>
                     </div>
                     <div id="accordion_filter" class="accordion-body collapse in form-inline">
                         <div class="accordion-inner">
                             <div class="control-group">
-                                <label class="control-label">
+                                <div class="control-label hide">
                                     Status
-                                </label>
-                                <div class="controls inline">
-                                    <div class="btn-group" data-toggle="buttons-radio">
-                                        <button type="button" class="btn btn-primary">Left</button>
-                                        <button type="button" class="btn btn-primary">Middle</button>
-                                        <button type="button" class="btn btn-primary">Right</button>
-                                    </div>
+                                </div>
+                                <div class="controls row-fluid">
+                                    <select class="span12" name="status" id="">
+                                        <option>All statuses</option>
+                                        <option value="">Notifier</option>
+                                        <option value="">PMT</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="control-label hide">
+                                    Priorities
+                                </div>
+                                <div class="controls row-fluid">
+                                    <select class="span12" name="priority" id="">
+                                        <option>All priorities</option>
+                                        <option value="">Notifier</option>
+                                        <option value="">PMT</option>
+                                    </select>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div class="row-fluid">
+                <input type="submit" class="hide"/>
+            </div>
+        </div>
+        <div class="span9">
+            {% include 'PMTWebBundle:Issue:list.html.twig' with {'issues': issues, 'view': 'advanced'} %}
         </div>
     </form>
 
