Prefix all routes to prevent collision with other packages

--- a/src/PMT/WebBundle/Resources/views/Dashboard/dashboard.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Dashboard/dashboard.html.twig
@@ -8,7 +8,7 @@
         <div class="span6">
             <ul class="actions nav nav-pills pull-right">
                 <li class="active">
-                    <a href="{{ path('issue_form') }}"><i class="icon-edit icon-plus"></i> Create issue</a>
+                    <a href="{{ path('pmtweb_issue_form') }}"><i class="icon-edit icon-plus"></i> Create issue</a>
                 </li>
                 <li>
                     <a href="#"><i class="icon-edit icon-plus"></i> Add gadgets</a>
