--- a/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
@@ -10,7 +10,7 @@
 
     <div class="row">
         {{ form_errors(form) }}
-        <form action="{{ path('issue_form') }}" method="post" {{ form_enctype(form) }}>
+        <form action="{{ path('pmtweb_issue_form') }}" method="post" {{ form_enctype(form) }}>
             <div class="span8">
                 <div class="accordion">
                     <div class="accordion-group">
