--- a/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
@@ -105,11 +105,25 @@
             <div class="accordion">
                 <div class="accordion-group">
                     <div class="accordion-heading">
+                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_comments">
+                            Comments
+                        </a>
+                    </div>
+                    <div id="accordion_comments" class="accordion-body collapse in">
+                        <div class="accordion-inner">
+                            {% include 'PMTWebBundle:Comment:list.html.twig' with {'view': 'advanced'} %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion">
+                <div class="accordion-group">
+                    <div class="accordion-heading">
                         <a class="accordion-toggle" data-toggle="collapse" href="#accordion_activity">
                             Activity
                         </a>
                     </div>
-                    <div id="accordion_activity" class="accordion-body collapse in">
+                    <div id="accordion_activity" class="accordion-body collapse">
                         <div class="accordion-inner">
                             {% include 'PMTWebBundle:Activity:list.html.twig' with {'view': 'advanced'} %}
                         </div>
@@ -118,25 +132,25 @@
             </div>
         </div>
         <div class="span4">
-        <div class="accordion">
-            <div class="accordion-group">
-                <div class="accordion-heading">
-                    <a class="accordion-toggle" data-toggle="collapse" href="#accordion_people">
-                        Actions
-                    </a>
-                </div>
-                <div id="accordion_people" class="accordion-body collapse in">
-                    <div class="accordion-inner">
-                        {% for step in backSteps %}
-                            <a href="#" class="btn btn-info">{{ step.status.name }}</a>
-                        {% endfor %}
-                        {% for step in nextSteps %}
-                            <a href="#" class="btn btn-success">{{ step.status.name }}</a>
-                        {% endfor %}
+            <div class="accordion">
+                <div class="accordion-group">
+                    <div class="accordion-heading">
+                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_actions">
+                            Actions
+                        </a>
+                    </div>
+                    <div id="accordion_actions" class="accordion-body collapse in">
+                        <div class="accordion-inner">
+                            {% for step in backSteps %}
+                                <a href="#" class="btn btn-info">{{ step.status.name }}</a>
+                            {% endfor %}
+                            {% for step in nextSteps %}
+                                <a href="#" class="btn btn-success">{{ step.status.name }}</a>
+                            {% endfor %}
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
             <div class="accordion">
                 <div class="accordion-group">
                     <div class="accordion-heading">
