--- a/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
@@ -1,13 +1,10 @@
 {% extends "PMTWebBundle::layout.html.twig" %}
 
+{% block content_title %}New issue{% endblock %}
+
+{% block content_actions %}{% endblock %}
+
 {% block content %}
-
-    <div class="row">
-        <div class="span8">
-            <h1>New issue</h1>
-        </div>
-    </div>
-
     <div class="row">
         {{ form_errors(form) }}
         <form action="{{ path('pmtweb_issue_form') }}" method="post" {{ form_enctype(form) }}>
