--- a/src/PMT/WebBundle/Resources/views/Project/layout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/layout.html.twig
@@ -1,19 +1,16 @@
 {% extends "PMTWebBundle::layout.html.twig" %}
 
-{% block content %}
-    <div class="row">
-        <div class="span8">
-            <h1>{{ project.name }}</h1>
-        </div>
-        <div class="span4">
-            <ul class="actions nav nav-pills pull-right">
-                <li class="active">
-                    <a href="{{ path('pmtweb_project_issue_form', {'projectCode': project.code}) }}"><i class="icon-edit icon-plus"></i> Create issue</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+{% block content_title %}{{ project.name }}{% endblock %}
 
+{% block content_actions %}
+    <ul class="actions nav nav-pills pull-right">
+        <li class="active">
+            <a href="{{ path('pmtweb_project_issue_form', {'projectCode': project.code}) }}"><i class="icon-edit icon-plus"></i> Create issue</a>
+        </li>
+    </ul>
+{% endblock %}
+
+{% block content %}
     <div class="row">
         <div class="span12">
             <div class="tabbable tabs-left">
