--- a/src/PMT/WebBundle/Resources/views/layout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/layout.html.twig
@@ -3,17 +3,17 @@
 <head>
     <meta charset="utf-8">
     <title>PMT</title>
-    <meta name="description" content="" />
-    <meta name="author" content="Dries De Peuter" />
+    <meta name="description" content=""/>
+    <meta name="author" content="Dries De Peuter"/>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
+    <link rel="shortcut icon" href="{{ asset('favicon.ico') }}"/>
 
-    <link href="{{ asset('bundles/pmtweb/css/bootstrap.min.css') }}" rel="stylesheet" />
-    <link href="{{ asset('bundles/pmtweb/vendor/select2/select2.css') }}" rel="stylesheet" />
-    <link href="{{ asset('bundles/pmtweb/css/select2-bootstrap.css') }}" rel="stylesheet" />
-    <link href="{{ asset('bundles/pmtweb/css/main.css') }}" rel="stylesheet" />
+    <link href="{{ asset('bundles/pmtweb/css/bootstrap.min.css') }}" rel="stylesheet"/>
+    <link href="{{ asset('bundles/pmtweb/vendor/select2/select2.css') }}" rel="stylesheet"/>
+    <link href="{{ asset('bundles/pmtweb/css/select2-bootstrap.css') }}" rel="stylesheet"/>
+    <link href="{{ asset('bundles/pmtweb/css/main.css') }}" rel="stylesheet"/>
 
     <script src="{{ asset('bundles/pmtweb/js/jquery.min.js') }}"></script>
     <script src="{{ asset('bundles/pmtweb/vendor/select2/select2.min.js') }}"></script>
@@ -34,6 +34,25 @@
 {% endif %}
 
 <div class="container">
+
+    {% block content_header %}
+        <div class="row">
+            <div class="span6">
+                <h1>{% block content_title %}{% endblock %}</h1>
+            </div>
+            <div class="span6">
+                {% block content_actions %}
+                    <ul class="actions nav nav-pills pull-right">
+                        <li class="active">
+                            <a href="{{ path('pmtweb_issue_form') }}"><i class="icon-edit icon-plus"></i> Create
+                                issue</a>
+                        </li>
+                    </ul>
+                {% endblock %}
+            </div>
+        </div>
+    {% endblock %}
+
 
     {% block content %}
     {% endblock %}
