--- a/src/PMT/WebBundle/Resources/views/Issue/navigator.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/navigator.html.twig
@@ -1,22 +1,8 @@
 {% extends "PMTWebBundle::layout.html.twig" %}
 
+{% block content_title %}Issues{% endblock %}
+
 {% block content %}
-    <div class="row">
-        <div class="span8">
-            <nav>
-                <p>
-                </p>
-            </nav>
-            <h1>Issues</h1>
-        </div>
-        <div class="span4">
-            <ul class="actions nav nav-pills pull-right">
-                <li class="active">
-                    <a href="{{ path('issue_form') }}"><i class="icon-edit icon-plus"></i> Create issue</a>
-                </li>
-            </ul>
-        </div>
-    </div>
     <form action="" class="issue-nagivator row">
         <div class="span3">
             <div class="accordion">
@@ -151,7 +137,21 @@
             </div>
         </div>
         <div class="span9">
-            {% include 'PMTWebBundle:Issue:list.html.twig' with {'issues': issues, 'view': 'advanced'} %}
+            <div class="accordion">
+                <div class="accordion-group">
+                    <div class="accordion-heading">
+                        <a class="accordion-toggle" href="javascript:void();">
+                            Issues
+                        </a>
+                    </div>
+                    <div id="accordion_issues" class="accordion-body collapse in">
+                        <div class="accordion-inner">
+                            {% include 'PMTWebBundle:Issue:list.html.twig' with {'issues': issues, 'view': 'advanced'} %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </form>
 
