--- a/src/PMT/WebBundle/Resources/views/layout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/layout.html.twig
@@ -35,23 +35,25 @@
 
 <div class="container">
 
-    {% block content_header %}
-        <div class="row">
-            <div class="span6">
-                <h1>{% block content_title %}{% endblock %}</h1>
+    {% if is_granted('ROLE_USER') %}
+        {% block content_header %}
+            <div class="row">
+                <div class="span6">
+                    <h1>{% block content_title %}{% endblock %}</h1>
+                </div>
+                <div class="span6">
+                    {% block content_actions %}
+                        <ul class="actions nav nav-pills pull-right">
+                            <li class="active">
+                                <a href="{{ path('pmtweb_issue_form') }}"><i class="icon-edit icon-plus"></i> Create
+                                    issue</a>
+                            </li>
+                        </ul>
+                    {% endblock %}
+                </div>
             </div>
-            <div class="span6">
-                {% block content_actions %}
-                    <ul class="actions nav nav-pills pull-right">
-                        <li class="active">
-                            <a href="{{ path('pmtweb_issue_form') }}"><i class="icon-edit icon-plus"></i> Create
-                                issue</a>
-                        </li>
-                    </ul>
-                {% endblock %}
-            </div>
-        </div>
-    {% endblock %}
+        {% endblock %}
+    {% endif %}
 
 
     {% block content %}
