--- a/src/PMT/WebBundle/Resources/views/Project/layout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/layout.html.twig
@@ -7,6 +7,9 @@
         <li class="active">
             <a href="{{ path('pmtweb_project_issue_form', {'projectCode': project.code}) }}"><i class="icon-edit icon-plus"></i> Create issue</a>
         </li>
+        <li>
+            <a href="#"><i class="icon-wrench"></i> Settings</a>
+        </li>
     </ul>
 {% endblock %}
 
