--- a/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
@@ -54,7 +54,7 @@
                                 <table>
                                     <tr>
                                         <td>Status:</td>
-                                        <td>value</td>
+                                        <td>{{ issue.status.names }}</td>
                                     </tr>
                                     <tr>
                                         <td>Resolution:</td>
