--- a/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
@@ -127,26 +127,35 @@
             <div class="accordion">
                 <div class="accordion-group">
                     <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_actions">
+                        <a class="accordion-toggle" href="javascript:void();">
                             Actions
                         </a>
                     </div>
-                    <div id="accordion_actions" class="accordion-body collapse in">
+                    <div id="accordion_actions" class="accordion-body in">
                         <div class="accordion-inner">
-                            {% for step in backSteps %}
-                                <a href="{{ path('pmtweb_issue_new_step', {
-                                    'projectCode': issue.project.code,
-                                    'id': issue.id,
-                                    'stepId': step.id
-                                }) }}" class="btn btn-info">{{ step.status.name }}</a>
-                            {% endfor %}
-                            {% for step in nextSteps %}
-                                <a href="{{ path('pmtweb_issue_new_step', {
-                                'projectCode': issue.project.code,
-                                'id': issue.id,
-                                'stepId': step.id
-                                }) }}" class="btn btn-success">{{ step.status.name }}</a>
-                            {% endfor %}
+                            <div class="btn-group">
+                                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                                    {{ issue.status.name }}
+                                    <span class="caret"></span>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    {% for step in backSteps %}
+                                        <li><a href="{{ path('pmtweb_issue_new_step', {
+                                        'projectCode': issue.project.code,
+                                        'id': issue.id,
+                                        'stepId': step.id
+                                        }) }}">{{ step.status.name }}</a></li>
+                                    {% endfor %}
+                                    {% for step in nextSteps %}
+                                        <li><a href="{{ path('pmtweb_issue_new_step', {
+                                        'projectCode': issue.project.code,
+                                        'id': issue.id,
+                                        'stepId': step.id
+                                        }) }}">{{ step.status.name }}</a></li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+
                         </div>
                     </div>
                 </div>
