--- a/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
@@ -5,7 +5,7 @@
 {% block content_actions %}{% endblock %}
 
 {% block content %}
-    <div class="row">
+    <div class="row-fluid">
         {{ form_errors(form) }}
         <form action="{{ path('pmtweb_issue_form') }}" method="post" {{ form_enctype(form) }}>
             <div class="span8">
