--- a/src/PMT/WebBundle/Resources/views/User/profile.html.twig
+++ b/src/PMT/WebBundle/Resources/views/User/profile.html.twig
@@ -12,13 +12,13 @@
 {% endblock %}
 
 {% block content %}
-    <div class="row">
+    <div class="row-fluid">
         <div class="span8">
             <h1></h1>
         </div>
     </div>
 
-    <div class="row">
+    <div class="row-fluid">
         <div class="span6">
             <div class="accordion">
                 <div class="accordion-group">
