--- a/src/PMT/WebBundle/Resources/views/layout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/layout.html.twig
@@ -33,11 +33,11 @@
     </div>
 {% endif %}
 
-<div class="container">
+<div class="container-fluid">
 
     {% if is_granted('ROLE_USER') %}
         {% block content_header %}
-            <div class="row">
+            <div class="row-fluid">
                 <div class="span6">
                     <h1>{% block content_title %}{% endblock %}</h1>
                 </div>
