--- a/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
@@ -114,6 +114,8 @@
 
 
             </div>
+        </div>
+        <div class="row-fluid">
             <div class="span12">
                 <div class="form-actions">
                     <div class="form-horizontal">
