Prevent crash for missing activity list

--- a/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
@@ -117,7 +117,7 @@
                     </div>
                     <div id="accordion_activity" class="accordion-body collapse">
                         <div class="accordion-inner">
-                            {% include 'PMTWebBundle:Activity:list.html.twig' with {'view': 'advanced'} %}
+                            {% include 'PMTWebBundle:Activity:list.html.twig' with {'view': 'advanced', 'activity': []} %}
                         </div>
                     </div>
                 </div>
