--- a/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
@@ -10,6 +10,7 @@
         <input type="text" id="username" name="username" required="required" class="input-block-level" />
     </div>
     <div>
+        <a class="btn btn-large btn-link pull-right" href="{{ path('pmtweb_dashboard') }}">Back</a>
         <input type="submit" value="{{ 'resetting.request.submit'|trans }}" class="btn btn-large btn-primary" />
     </div>
 </form>
