--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -17,6 +17,7 @@
     {{ form_widget(form.plainPassword.second, { 'attr': {'class': 'input-block-level'} }) }}
 
     <div>
+        <a class="btn btn-large btn-link pull-right" href="{{ path('pmtweb_dashboard') }}">Back</a>
         <input type="submit" value="{{ 'registration.submit'|trans }}" class="btn btn-large btn-primary"/>
     </div>
 </form>
