Prevent dashboard crash

--- a/src/PMT/WebBundle/Resources/views/Dashboard/dashboard.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Dashboard/dashboard.html.twig
@@ -32,7 +32,7 @@
                     </div>
                     <div id="accordion_stream" class="accordion-body collapse in">
                         <div class="accordion-inner">
-                            {% include 'PMTWebBundle:Activity:list.html.twig' with {'view': 'advanced'} %}
+                            {% include 'PMTWebBundle:Activity:list.html.twig' with {'view': 'advanced', 'activity': []} %}
                         </div>
                     </div>
                 </div>
