--- a/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
@@ -23,7 +23,7 @@
                     <div id="accordion_details" class="accordion-body collapse in">
                         <div class="accordion-inner row-fluid">
                             <div class="span6">
-                                <table>
+                                <table class="issue-details">
                                     <tr>
                                         <td>Type:</td>
                                         <td>{{ issue.type.name }}</td>
@@ -51,7 +51,7 @@
                                 </table>
                             </div>
                             <div class="span6">
-                                <table>
+                                <table class="issue-details">
                                     <tr>
                                         <td>Status:</td>
                                         <td>{{ issue.status.name }}</td>
