Add dueDate and restyle

--- a/src/PMT/WebBundle/Resources/public/css/main.css
+++ b/src/PMT/WebBundle/Resources/public/css/main.css
@@ -86,3 +86,8 @@ ul.activity-stream > li {
 .issue-nagivator .control-group:last-child {
     margin-bottom: 0;
 }
+
+ul .a {
+    float: right;
+    width: 50%;
+}
