--- a/src/PMT/WebBundle/Resources/views/Project/milestones.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/milestones.html.twig
@@ -6,11 +6,11 @@
             <div class="accordion">
                 <div class="accordion-group">
                     <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_description">
+                        <a class="accordion-toggle">
                             Milestones
                         </a>
                     </div>
-                    <div id="accordion_description" class="accordion-body collapse in">
+                    <div class="accordion-body collapse in">
                         <div class="accordion-inner">
                             {% include 'PMTWebBundle:Milestone:list.html.twig' with {'milestones': project.milestones, 'view': 'advanced'} %}
                         </div>
