Alter time.moment handling

--- a/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
@@ -72,6 +72,14 @@
                                 </div>
                                 <div class="control-group">
                                     <div class="control-label">
+                                        {{ form_label(form.milestone) }}
+                                    </div>
+                                    <div class="controls row-fluid">
+                                        {{ form_widget(form.milestone, {'attr': {'class': 'span12' }}) }}
+                                    </div>
+                                </div>
+                                <div class="control-group">
+                                    <div class="control-label">
                                         {{ form_label(form.type) }}
                                     </div>
                                     <div class="controls row-fluid">
