--- a/src/PMT/WebBundle/Resources/views/layout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/layout.html.twig
@@ -17,6 +17,8 @@
 
     <script src="{{ asset('bundles/pmtweb/js/jquery.min.js') }}"></script>
     <script src="{{ asset('bundles/pmtweb/vendor/select2/select2.min.js') }}"></script>
+    <script src="{{ asset('bundles/pmtweb/vendor/momentjs/moment.min.js') }}"></script>
+    <script src="{{ asset('bundles/pmtweb/js/main.js') }}"></script>
 
     {% block head_additions %}{% endblock %}
 </head>
