--- a/src/PMT/WebBundle/Resources/views/Activity/list.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Activity/list.html.twig
@@ -1,7 +1,3 @@
-{% block head_additions %}
-    <script src="{{ asset('bundles/pmtweb/vendor/momentjs/moment.min.js') }}"></script>
-{% endblock %}
-
 {% if view == 'advanced' %}
     <ul class="activity-stream advanced">
         {% for log in activity %}
@@ -18,7 +14,7 @@
                                 <a href="{{ path('pmtweb_issue_detail', {'projectCode': log.issue.project.code, 'id': log.issue.id}) }}">{{ log.issue.project.code }}-{{ log.issue.id }} - {{ log.issue.summary }}</a>
                             </p>
                             <p>
-                                <i class="icon-time"></i> <time datetime="{{ log.timestamp|date('Y-m-d\TH:i:s') }}"></time>
+                                <i class="icon-time"></i> <time class="moment" datetime="{{ log.timestamp|date('Y-m-d\TH:i:s') }}"></time>
                             </p>
                         </li>
                     </ul>
@@ -34,7 +30,7 @@
                     <a href="{{ path('pmtweb_user_profile', {'username': 'NoUseFreak'}) }}">Dries De Peuter</a> updated <a href="#">NOTIFIER-2 - Some issue summary</a>
                 </p>
                 <p>
-                    <i class="icon-time"></i> <time datetime="2013-06-06T20:00+00:00"></time>
+                    <i class="icon-time"></i> <time class="moment" datetime="2013-06-06T20:00+00:00"></time>
                 </p>
             </li>
             <li>
@@ -42,16 +38,8 @@
                     <a href="{{ path('pmtweb_user_profile', {'username': 'NoUseFreak'}) }}">Dries De Peuter</a> updated <a href="#">NOTIFIER-2 - Some issue summary</a>
                 </p>
                 <p>
-                    <i class="icon-time"></i> <time datetime="2013-06-13T20:00+00:00"></time>
+                    <i class="icon-time"></i> <time class="moment" datetime="2013-06-13T20:00+00:00"></time>
                 </p>
             </li>
         </ul>
 {% endif %}
-
-{% block body_scripts %}
-    <script type="text/javascript">
-        $('time').html(function() {
-            return moment($(this).attr('datetime')).fromNow();
-        })
-    </script>
-{% endblock %}
