--- a/src/PMT/WebBundle/Resources/views/Milestone/list.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Milestone/list.html.twig
@@ -3,8 +3,12 @@
     {% for milestone in milestones %}
         <li class="row">
             <div class="span6">
-                <div>{{ milestone.name }}</div>
-                <div>{{ milestone.dueDate|date("d-m-Y") }}</div>
+                <div><a href="#">{{ milestone.name }}</a></div>
+                {% if milestone.dueDate > date() %}
+                    <div>Due <time class="moment" datetime="{{ milestone.dueDate|date('Y-m-d\TH:i:s') }}"></time></div>
+                {% else %}
+                    <div>Past due <time class="moment" datetime="{{ milestone.dueDate|date('Y-m-d\TH:i:s') }}"></time></div>
+                {% endif %}
             </div>
             <div class="span6">
                 <div>
