--- a/src/PMT/WebBundle/Resources/views/layout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/layout.html.twig
@@ -15,10 +15,23 @@
     <link href="{{ asset('bundles/pmtweb/css/select2-bootstrap.css') }}" rel="stylesheet"/>
     <link href="{{ asset('bundles/pmtweb/css/main.css') }}" rel="stylesheet"/>
 
-    <script src="{{ asset('bundles/pmtweb/js/jquery.min.js') }}"></script>
-    <script src="{{ asset('bundles/pmtweb/vendor/select2/select2.min.js') }}"></script>
-    <script src="{{ asset('bundles/pmtweb/vendor/momentjs/moment.min.js') }}"></script>
-    <script src="{{ asset('bundles/pmtweb/js/main.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/pmtweb/js/jquery.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/pmtweb/vendor/select2/select2.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/pmtweb/vendor/momentjs/moment.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/pmtweb/js/main.js') }}"></script>
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', '{{ google_analytics_property_id }}']);
+        _gaq.push(['_trackPageview']);
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' :
+                    'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
 
     {% block head_additions %}{% endblock %}
 </head>
