Add dynamic milestone selection

--- a/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
@@ -34,7 +34,13 @@
                                     </tr>
                                     <tr>
                                         <td>Milestone:</td>
-                                        <td>value</td>
+                                        <td>
+                                            {% if issue.milestone %}
+                                                {{ issue.milestone.name }}
+                                            {% else %}
+                                                No milestone
+                                            {% endif %}
+                                        </td>
                                     </tr>
                                     <tr>
                                         <td>Components:</td>
